fix: Adjust z-index for bookmark component in card

--- a/client/src/components/shared/ExtraLargeCard/ExtraLargeCard.css
+++ b/client/src/components/shared/ExtraLargeCard/ExtraLargeCard.css
@@ -60,6 +60,7 @@
 
 .bookmark {
   align-self: flex-end;
+  z-index: 99999;
 }
 
 .scholarship-list-box {
